--- a/HOISTING,SCOPE/HOISTING.HTML
+++ b/HOISTING,SCOPE/HOISTING.HTML
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src='./index.js'  ></script>
+    <!-- <script src='./index.js'  ></script> -->
+    <!-- <script src='./index.js'  ></script> -->
+    <script src='./index3.js'  ></script>
+
 
     <title></title>
 </head>
 <body>
-erwefwiowiewe;oi    
 </body>
 
 </html>
