--- a/GENERATOR/index.html
+++ b/GENERATOR/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="./Computer.js"></script>
     <title>Document</title>
+ <script src="./index.js" ></script>
 </head>
 <body>
     
-   <script>  
-  hi();
-
-   </script>
 </body>
 </html>
